// Schéma 3: Commandes & Achats
// https://dbdiagram.io/

// Tables de référence (pour les relations FK)
Table users {
  id bigint [pk, increment]
  username varchar(255) [unique, not null]
  email varchar(255) [unique, not null]
  created_at timestamp [not null]
  updated_at timestamp [not null]
  
  Note: 'Table utilisateurs (référence pour les relations FK)'
}

Table products {
  id bigint [pk, increment]
  name varchar(255) [not null]
  price decimal(10,2) [not null]
  created_at timestamp [not null]
  updated_at timestamp [not null]
  
  Note: 'Table produits (référence pour les relations FK)'
}

Table special_offers {
  id bigint [pk, increment]
  product_id bigint [not null]
  name varchar(255) [not null]
  discount_type enum('percentage','fixed') [not null]
  discount_value decimal(8,2) [not null]
  created_at timestamp [not null]
  updated_at timestamp [not null]
  
  Note: 'Table offres spéciales (référence pour les relations FK)'
}

Table carts {
  id bigint [pk, increment]
  user_id bigint [ref: > users.id]
  subtotal decimal(10,2) [default: 0.00]
  tax_amount decimal(10,2) [default: 0.00]
  total decimal(10,2) [default: 0.00]
  tax_rate decimal(5,2) [default: 20.00]
  total_items integer [default: 0]
  shipping_cost decimal(10,2) [default: 0.00]
  metadata json [null]
  status enum('active','abandoned','converted') [default: 'active']
  expires_at timestamp [null]
  created_at timestamp [not null]
  updated_at timestamp [not null]
  
  indexes {
    (user_id, status) [unique]
  }
  
  Note: 'Paniers d\'achat des utilisateurs'
}

Table cart_items {
  id bigint [pk, increment]
  cart_id bigint [ref: > carts.id]
  product_id bigint [ref: > products.id]
  quantity integer [not null]
  unit_price decimal(10,2) [not null]
  total_price decimal(10,2) [not null]
  is_available boolean [default: true]
  
  // Offres spéciales
  special_offer_id bigint [ref: > special_offers.id, null]
  original_price decimal(10,2) [null]
  discount_amount decimal(10,2) [default: 0.00]
  
  created_at timestamp [not null]
  updated_at timestamp [not null]
  
  Note: 'Articles dans les paniers d\'achat'
}

Table orders {
  id bigint [pk, increment]
  order_number varchar(255) [unique, not null]
  user_id bigint [ref: > users.id]
  
  // Statut
  status enum('pending','confirmed','preparing','shipped','delivered','cancelled','returned') [default: 'pending']
  status_history text [null]
  status_updated_at timestamp [null]
  
  // Adresses
  billing_address json [not null]
  shipping_address json [not null]
  
  // Montants
  subtotal decimal(10,2) [not null]
  tax_amount decimal(10,2) [default: 0.00]
  shipping_cost decimal(10,2) [default: 0.00]
  discount_amount decimal(10,2) [default: 0.00]
  total_amount decimal(10,2) [not null]
  
  // Paiement
  payment_method varchar(255) [null]
  payment_status varchar(255) [default: 'pending']
  payment_transaction_id varchar(255) [null]
  stripe_payment_intent varchar(255) [null]
  stripe_charge_id varchar(255) [null]
  paid_at timestamp [null]
  
  // Livraison
  shipping_method varchar(255) [null]
  tracking_number varchar(255) [null]
  shipped_at timestamp [null]
  delivered_at timestamp [null]
  estimated_delivery timestamp [null]
  
  // Retours
  return_requested boolean [default: false]
  return_processed boolean [default: false]
  return_approved boolean [default: false]
  has_non_returnable_items boolean [default: false]
  
  created_at timestamp [not null]
  updated_at timestamp [not null]
  
  Note: 'Commandes d\'achat avec gestion complète'
}

Table order_items {
  id bigint [pk, increment]
  order_id bigint [ref: > orders.id]
  product_id bigint [ref: > products.id]
  
  // Snapshot du produit
  product_name varchar(255) [not null]
  product_sku varchar(255) [null]
  product_description text [null]
  product_image varchar(255) [null]
  product_category json [null]
  
  // Quantité et prix
  quantity integer [not null]
  unit_price decimal(10,2) [not null]
  total_price decimal(10,2) [not null]
  tax_rate decimal(5,2) [default: 20.00]
  
  // Statut
  status enum('pending','confirmed','preparing','shipped','delivered','cancelled','returned') [default: 'pending']
  status_updated_at timestamp [null]
  
  // Retours
  is_returnable boolean [default: false]
  is_returned boolean [default: false]
  return_reason varchar(255) [null]
  return_quantity integer [null]
  
  // Offres spéciales
  special_offer_id bigint [ref: > special_offers.id, null]
  original_price decimal(10,2) [null]
  discount_amount decimal(10,2) [default: 0.00]
  
  created_at timestamp [not null]
  updated_at timestamp [not null]
  
  Note: 'Articles dans les commandes avec historique'
}

Table order_returns {
  id bigint [pk, increment]
  order_id bigint [ref: > orders.id]
  return_number varchar(255) [unique, not null]
  reason text [not null]
  status enum('requested','approved','rejected','processed') [default: 'requested']
  admin_notes text [null]
  refund_amount decimal(10,2) [not null]
  processing_fee decimal(10,2) [default: 0.00]
  processed_at timestamp [null]
  created_at timestamp [not null]
  updated_at timestamp [not null]
  
  Note: 'Gestion des retours de commandes'
}

Table order_status_transitions {
  id bigint [pk, increment]
  order_id bigint [ref: > orders.id]
  from_status varchar(255) [null]
  to_status varchar(255) [not null]
  reason text [null]
  admin_notes text [null]
  triggered_by bigint [ref: > users.id, null]
  created_at timestamp [not null]
  
  Note: 'Historique des changements de statut des commandes'
}
